--- a/Prototype2/Base.lproj/Main.storyboard
+++ b/Prototype2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JkM-a9-ai5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sBQ-05-TpT">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -7,6 +7,62 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Controller View Controller-->
+        <scene sceneID="rKq-Mk-WB1">
+            <objects>
+                <viewController id="sBQ-05-TpT" customClass="MVVControllerViewController" customModule="Prototype2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5Lp-nr-DGZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X71-ZK-Hfb">
+                                <rect key="frame" x="0.0" y="44" width="414" height="97"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tpd-eE-AMc">
+                                        <rect key="frame" x="8" y="36" width="64" height="40"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="o6d-4e-YXc">
+                                <rect key="frame" x="0.0" y="185" width="414" height="711"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="sBQ-05-TpT" id="nwF-T3-T8J"/>
+                                </connections>
+                            </mapView>
+                            <searchBar contentMode="redraw" fixedFrame="YES" text="" translatesAutoresizingMaskIntoConstraints="NO" id="8pH-FL-pqO">
+                                <rect key="frame" x="0.0" y="141" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" spellCheckingType="yes" enablesReturnKeyAutomatically="YES" textContentType="location"/>
+                                <connections>
+                                    <outlet property="delegate" destination="sBQ-05-TpT" id="YPF-kF-Eub"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="t3B-3x-eX0" firstAttribute="bottom" secondItem="X71-ZK-Hfb" secondAttribute="bottom" constant="690" id="TMH-fI-Qm9"/>
+                            <constraint firstItem="X71-ZK-Hfb" firstAttribute="top" secondItem="t3B-3x-eX0" secondAttribute="top" id="pUh-hs-DDg"/>
+                            <constraint firstItem="X71-ZK-Hfb" firstAttribute="leading" secondItem="t3B-3x-eX0" secondAttribute="leading" id="tQi-5d-GKY"/>
+                            <constraint firstItem="X71-ZK-Hfb" firstAttribute="trailing" secondItem="t3B-3x-eX0" secondAttribute="trailing" id="uU5-rQ-2SA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="t3B-3x-eX0"/>
+                    </view>
+                    <connections>
+                        <outlet property="lblDirection" destination="Tpd-eE-AMc" id="U6a-bW-8aN"/>
+                        <outlet property="mapView" destination="o6d-4e-YXc" id="gLe-DX-fV5"/>
+                        <outlet property="searchBar" destination="8pH-FL-pqO" id="qIk-gJ-TOL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tgx-wy-Ppz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-169862.31884057971" y="-3201.5625"/>
+        </scene>
         <!--Maps View Controller-->
         <scene sceneID="y3E-1j-3eg">
             <objects>
@@ -15,10 +71,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" semanticContentAttribute="spatial" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5r9-ha-2YY" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="-30" width="414" height="603"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wgK-Y1-Gyd">
                                 <rect key="frame" x="69" y="653" width="277" height="30"/>
                                 <constraints>
@@ -37,6 +89,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" semanticContentAttribute="spatial" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5r9-ha-2YY" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="21" width="414" height="603"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -58,7 +114,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z6q-8o-Jot" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-168268.11594202899" y="-3086.3839285714284"/>
+            <point key="canvasLocation" x="-169039" y="-3218"/>
         </scene>
         <!--Object Detection View Controller-->
         <scene sceneID="UAa-BZ-LfR">
@@ -77,7 +133,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KhH-KS-Kqx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-167197" y="-3086"/>
+            <point key="canvasLocation" x="-168129" y="-3218"/>
         </scene>
     </scenes>
 </document>
