--- a/Prototype2/Base.lproj/Main.storyboard
+++ b/Prototype2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sBQ-05-TpT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IAg-wO-SNR">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -12,70 +12,75 @@
             <objects>
                 <viewController id="sBQ-05-TpT" customClass="MVVControllerViewController" customModule="Prototype2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5Lp-nr-DGZ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X71-ZK-Hfb">
-                                <rect key="frame" x="0.0" y="44" width="414" height="97"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X71-ZK-Hfb">
+                                <rect key="frame" x="0.0" y="44" width="414" height="165"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tpd-eE-AMc">
-                                        <rect key="frame" x="8" y="36" width="64" height="40"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tpd-eE-AMc">
+                                        <rect key="frame" x="8" y="36" width="193" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cd9-L0-tej">
+                                        <rect key="frame" x="257" y="36" width="118" height="31"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggI-t7-Ura">
+                                        <rect key="frame" x="277" y="71" width="45" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="record"/>
+                                        <connections>
+                                            <action selector="buttonPressed:" destination="sBQ-05-TpT" eventType="touchUpInside" id="fA7-Fd-NZ1"/>
+                                        </connections>
+                                    </button>
+                                    <searchBar contentMode="redraw" fixedFrame="YES" text="" translatesAutoresizingMaskIntoConstraints="NO" id="8pH-FL-pqO">
+                                        <rect key="frame" x="0.0" y="101" width="414" height="56"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" spellCheckingType="yes" enablesReturnKeyAutomatically="YES" textContentType="location"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="sBQ-05-TpT" id="YPF-kF-Eub"/>
+                                        </connections>
+                                    </searchBar>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="o6d-4e-YXc">
-                                <rect key="frame" x="0.0" y="185" width="414" height="711"/>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Xve-iO-SSS">
+                                <rect key="frame" x="189" y="503" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                            <mapView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o6d-4e-YXc">
+                                <rect key="frame" x="0.0" y="217" width="414" height="679"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outlet property="delegate" destination="sBQ-05-TpT" id="nwF-T3-T8J"/>
                                     <outletCollection property="gestureRecognizers" destination="FqT-Cf-pm2" appends="YES" id="qM8-oe-RyH"/>
                                 </connections>
                             </mapView>
-                            <searchBar contentMode="redraw" text="" translatesAutoresizingMaskIntoConstraints="NO" id="8pH-FL-pqO">
-                                <rect key="frame" x="0.0" y="129" width="414" height="56"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" spellCheckingType="yes" enablesReturnKeyAutomatically="YES" textContentType="location"/>
-                                <connections>
-                                    <outlet property="delegate" destination="sBQ-05-TpT" id="YPF-kF-Eub"/>
-                                </connections>
-                            </searchBar>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Xve-iO-SSS">
-                                <rect key="frame" x="189" y="503" width="37" height="37"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="8pH-FL-pqO" firstAttribute="trailing" secondItem="X71-ZK-Hfb" secondAttribute="trailing" id="1sw-bM-MMq"/>
-                            <constraint firstItem="t3B-3x-eX0" firstAttribute="trailing" secondItem="Xve-iO-SSS" secondAttribute="trailing" constant="211" id="5er-qh-Jwp"/>
-                            <constraint firstItem="o6d-4e-YXc" firstAttribute="top" secondItem="8pH-FL-pqO" secondAttribute="bottom" id="Gwv-O5-kfR"/>
-                            <constraint firstItem="t3B-3x-eX0" firstAttribute="bottom" secondItem="Xve-iO-SSS" secondAttribute="bottom" constant="370" id="Hce-b6-Vwo"/>
-                            <constraint firstItem="Xve-iO-SSS" firstAttribute="leading" secondItem="t3B-3x-eX0" secondAttribute="leading" constant="166" id="ITA-R8-1IX"/>
-                            <constraint firstItem="Xve-iO-SSS" firstAttribute="top" secondItem="8pH-FL-pqO" secondAttribute="bottom" constant="270" id="N3E-zM-FKL"/>
-                            <constraint firstItem="8pH-FL-pqO" firstAttribute="leading" secondItem="o6d-4e-YXc" secondAttribute="leading" id="PNp-Jv-Z7Q"/>
-                            <constraint firstItem="t3B-3x-eX0" firstAttribute="bottom" secondItem="X71-ZK-Hfb" secondAttribute="bottom" constant="690" id="TMH-fI-Qm9"/>
-                            <constraint firstItem="8pH-FL-pqO" firstAttribute="trailing" secondItem="o6d-4e-YXc" secondAttribute="trailing" id="YuU-bb-ysb"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="o6d-4e-YXc" secondAttribute="bottom" constant="-34" id="nuS-st-igp"/>
-                            <constraint firstItem="8pH-FL-pqO" firstAttribute="leading" secondItem="X71-ZK-Hfb" secondAttribute="leading" id="nzH-ud-VZj"/>
-                            <constraint firstItem="X71-ZK-Hfb" firstAttribute="top" secondItem="t3B-3x-eX0" secondAttribute="top" id="pUh-hs-DDg"/>
-                            <constraint firstItem="X71-ZK-Hfb" firstAttribute="leading" secondItem="t3B-3x-eX0" secondAttribute="leading" id="tQi-5d-GKY"/>
-                            <constraint firstItem="X71-ZK-Hfb" firstAttribute="trailing" secondItem="t3B-3x-eX0" secondAttribute="trailing" id="uU5-rQ-2SA"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="t3B-3x-eX0"/>
                     </view>
+                    <navigationItem key="navigationItem" id="oaB-nV-LrR"/>
                     <connections>
                         <outlet property="lblDirection" destination="Tpd-eE-AMc" id="U6a-bW-8aN"/>
+                        <outlet property="lblTitle" destination="cd9-L0-tej" id="ULn-VC-3ZO"/>
                         <outlet property="mapView" destination="o6d-4e-YXc" id="gLe-DX-fV5"/>
                         <outlet property="searchBar" destination="8pH-FL-pqO" id="qIk-gJ-TOL"/>
-                        <outlet property="tapGesture" destination="FqT-Cf-pm2" id="jJF-sg-m49"/>
+                        <outlet property="tapGesture" destination="ggI-t7-Ura" id="a7D-gK-Giv"/>
                         <outlet property="voiceActivityIndicator" destination="Xve-iO-SSS" id="ZKw-bG-DGX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tgx-wy-Ppz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="FqT-Cf-pm2">
+                <tapGestureRecognizer delaysTouchesBegan="YES" id="FqT-Cf-pm2">
                     <connections>
                         <action selector="tapGestureAction:" destination="sBQ-05-TpT" id="CXN-Ub-zPu"/>
                     </connections>
@@ -110,7 +115,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" semanticContentAttribute="spatial" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5r9-ha-2YY" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="21" width="414" height="603"/>
+                                <rect key="frame" x="-9" y="42" width="414" height="603"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
                         </subviews>
@@ -144,7 +149,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="etw-4r-gZT"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="d3r-LT-Ws2" appends="YES" id="gHj-u9-ZyT"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="kjL-kp-XFV"/>
                     <connections>
@@ -152,6 +161,12 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KhH-KS-Kqx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="d3r-LT-Ws2">
+                    <connections>
+                        <action selector="start:" destination="IAg-wO-SNR" id="mmc-xQ-vov"/>
+                        <segue destination="sBQ-05-TpT" kind="presentation" identifier="startMap" id="5F6-O4-FLJ"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-168129" y="-3218"/>
         </scene>
